--- a/assets/index.css
+++ b/assets/index.css
@@ -1,123 +1,143 @@
-#game{
-    position: relative;
-    width: 100%;
-    height: 600px;
-    background-image: url('../images/sky.png');
+#game {
+  position: relative;
+  width: 100%;
+  height: 600px;
+  background-image: url("../images/sky.png");
 }
-.bird{
-    position: absolute;
-    top: 235px;
-    left: 50%;
-    margin-left: -15px;
-    width: 30px;
-    height: 30px;
-    background-image: url('../images/birds.png');
-    transition: top 0.3s linear;
+.bird {
+  position: absolute;
+  top: 235px;
+  left: 50%;
+  margin-left: -15px;
+  width: 30px;
+  height: 30px;
+  background-image: url("../images/birds.png");
+  transition: top 0.3s linear;
 }
-.start{
-    position: absolute;
-    top: 295px;
-    left: 50%;
-    margin-left: -100px;
-    width: 200px;
-    height: 60px;
-    text-align: center;
-    line-height: 60px;
-    font-weight: bolder;
-    cursor: pointer;
-    transition: all 0.3s linear;
-    cursor: pointer;
+.start {
+  position: absolute;
+  top: 295px;
+  left: 50%;
+  margin-left: -100px;
+  width: 200px;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  font-weight: bolder;
+  transition: all 0.3s linear;
+  cursor: pointer;
 }
-.start.start-white{
-    color: #fff;
-    font-size: 24px;
+.start.start-white {
+  color: #fff;
+  font-size: 24px;
 }
-.start.start-blue{
-    color: #09f;
-    font-size: 36px;
+.start.start-blue {
+  color: #09f;
+  font-size: 36px;
 }
-.score{
-    position: absolute;
-    left: 50%;
-    /* margin-left: ; */
-    transform: translateX(-50%);
-    font-size: 24px;
-    color: #fff;
-    font-weight: bolder;
-    display: none;
+.score {
+  position: absolute;
+  left: 50%;
+  /* margin-left: ; */
+  transform: translateX(-50%);
+  font-size: 24px;
+  color: #fff;
+  font-weight: bolder;
+  display: none;
 }
-.mask{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #000;
-    opacity: 0.7;
-    display: none;
+.mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000;
+  opacity: 0.7;
+  display: none;
+  z-index: 2;
 }
 
-.end{
-    position: absolute;
-    top: 70px;
-    left: 50%;
-    display: none;
-    transform: translateX(-50%);
-    text-align: center;
+.end {
+  position: absolute;
+  top: 70px;
+  left: 50%;
+  display: none;
+  transform: translateX(-50%);
+  text-align: center;
+  z-index: 3;
 }
-.end .over{
-    font-size: 35px;
-    font-weight: bolder;
-    color: red;
+.end .over {
+  font-size: 35px;
+  font-weight: bolder;
+  color: red;
 }
 
 .end .result,
-.end .final-score{
-    margin-top: 20px;
-    color: #ff0;
-    font-size: 20px;
-    font-weight: bold;
+.end .final-score {
+  margin-top: 20px;
+  color: #ff0;
+  font-size: 20px;
+  font-weight: bold;
 }
-.end .rank-list{
-    margin-top: 20px;
-    color: #09f;
-    text-align: left;
+.end .rank-list {
+  margin-top: 20px;
+  color: #09f;
+  text-align: left;
 }
 
-.end .rank-item{
-    height: 30px;
-    line-height: 30px;
-    margin-bottom: 10px;
-    padding: 0 10px;
-    font-size: 13px;
+.end .rank-item {
+  height: 30px;
+  line-height: 30px;
+  margin-bottom: 10px;
+  padding: 0 10px;
+  font-size: 13px;
 }
-.end .rank-degree{
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    line-height: 14px;
-    margin-right: 10px;
-    text-align: center;
-    color: #fff;
-    background-color: #8eb9f5;
-    font-size: 12px;
+.end .rank-degree {
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  line-height: 14px;
+  margin-right: 10px;
+  text-align: center;
+  color: #fff;
+  background-color: #8eb9f5;
+  font-size: 12px;
 }
-.end .rank-degree.first{
-    background-color: #f54545;
+.end .rank-degree.first {
+  background-color: #f54545;
 }
-.end .rank-degree.second{
-    background-color: #ff8547;
+.end .rank-degree.second {
+  background-color: #ff8547;
 }
-.end .rank-degree.third{
-    background-color: #ffac38;
+.end .rank-degree.third {
+  background-color: #ffac38;
 }
-.end .rank-score{
-    display: inline-block;
-    width: 30px;
+.end .rank-score {
+  display: inline-block;
+  width: 30px;
 }
-.end .restart{
-    color: #09f;
-    font-size: 18px;
-    font-weight: bolder;
-    cursor: pointer;
+.end .restart {
+  color: #09f;
+  font-size: 18px;
+  font-weight: bolder;
+  cursor: pointer;
+}
+/* 柱子 */
+.pipe {
+  position: absolute;
+  /* left: 300px; */
+  width: 52px;
+  height: 150px;
+  z-index: 1;
+}
+
+.pipe.pipe-up {
+  top: 0;
+  background-image: url('../images/pipe2.png');
+  background-position-y: bottom;
+}
+
+.pipe.pipe-bottom {
+  bottom: 0;
+  background-image: url('../images/pipe1.png');
 }
